--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BlogApplication</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
+  <title>Blomqvist</title>
+  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag    "http://fonts.googleapis.com/css?family=Julius+Sans+One", "data-turbolinks-track" => true %>
+
+  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+	<div class="container-fluid">
+		<div id="site-container">
+			<%= render partial: 'shared/header' %>
+			<div id="content-container">
+				<%= yield %>
+			</div>
+		</div>
+		<%= render partial: 'shared/footer' %>
+	</div>
 </body>
 </html>
