--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Blomqvist</title>
+  <title>Max Blomqvist</title>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script>window.jQuery || document.write("<script src=\"<%= asset_path 'jquery-1.9.1.js' %>\">\x3C/script>")</script>
+
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= stylesheet_link_tag    "http://fonts.googleapis.com/css?family=Julius+Sans+One", "data-turbolinks-track" => true %>
 
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  <!--[if IE 7]><%= stylesheet_link_tag 'font-awesome-ie7' %><![endif]-->
 </head>
 <body>
 	<div class="container-fluid">
