--- a/app/views/posts/_add_post.html.erb
+++ b/app/views/posts/_add_post.html.erb
@@ -1,4 +1,4 @@
-<% if not_editing? %>
+<% if authenticated? && not_editing? %>
 	<%= form_for Post.new do |f| %>
 		<%= f.hidden_field :page_id, value: @page.id %>
 		<%= f.hidden_field :url, value: request.path %>
