--- a/app/views/shared/page_not_found.html.erb
+++ b/app/views/shared/page_not_found.html.erb
@@ -1,13 +1,12 @@
 <div class="row-fluid static-page-content">
 	<div class="span6">
-		<%= render_editable_content(:h1, 'Page not found', { id: 'page_title' }, 'simple') %>
-		<%= render_editable_content(:div, "We're sorry, page not found.", { id: 'page_content' }, 'simple') %>
+		<%= content_tag(:h1, 'Page not found', { id: 'page_title' }, 'simple') %>
+		<%= content_tag(:div, "We're sorry, page not found.", { id: 'page_content' }, 'simple') %>
 		<p>
-			<%= link_to 'Create page', new_admin_page_path if authenticated? and not_editing? %>
+			<%= link_to 'Create page', new_admin_page_path if authenticated? && not_editing? %>
 		</p>
-		<%= render_editable_content(:span, request.path, { id: 'page_new', style: 'display:none' }, 'full') %>
 	</div>
 	<div class="span6">
-		<%= render_editable_content(:img, '', { src: 'http://placehold.it/600x400&text=page+not+found', id: 'page_image' , class: 'static-page-image' }, 'image') %>
+		<%= image_tag 'page_not_found.gif', class: 'static-page-image', alt: 'Page not found' %>
 	</div>
 </div>
