--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -27,3 +27,87 @@
 // .active_admin       applies to any Active Admin namespace
 // .admin_namespace    applies to the admin namespace (eg: /admin)
 // .other_namespace    applies to a custom namespace named other (eg: /other)
+
+a.member_link.view_link, a.member_link.edit_link, a.member_link.delete_link {
+  display: inline-block;
+  *display: inline;
+  padding: 4px 12px;
+  margin-bottom: 0;
+  *margin-left: .3em;
+  font-size: 14px;
+  line-height: 20px;
+  color: #333333;
+  text-align: center;
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+  vertical-align: middle;
+  cursor: pointer;
+  background-color: #f5f5f5;
+  *background-color: #e6e6e6;
+  background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
+  background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
+  background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
+  background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
+  background-repeat: repeat-x;
+  border: 1px solid #cccccc;
+  *border: 0;
+  border-color: #e6e6e6 #e6e6e6 #bfbfbf;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  border-bottom-color: #b3b3b3;
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe6e6e6', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+  *zoom: 1;
+  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+     -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+          box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+ 	text-shadow: none;
+	background-image: none;
+	opacity: 1;
+	border: 0;
+	filter: alpha(opacity=100);
+	-webkit-box-shadow: none;
+	   -moz-box-shadow: none;
+        	box-shadow: none;	          
+	color: #ffffff !important;
+	text-decoration: none !important;
+	/*margin: 5px 0;*/
+}
+
+a.member_link.view_link {
+	background-color: #1abc9c;
+	&:hover, &:focus, &:active { 
+		background-color: lighten(#1abc9c, 10%); 
+		text-shadow: none;
+	}
+}
+
+a.member_link.edit_link {
+	background-color: #3498db;
+	&:hover, &:focus, &:active { 
+		background-color: lighten(#3498db, 10%); 
+		color: #ffffff;
+		text-shadow: none;
+	}
+}
+
+a.member_link.delete_link {
+	background-color: #e74c3c;
+  margin-right: 0 !important;
+	&:hover, &:focus, &:active { 
+		background-color: lighten(#e74c3c, 10%); 
+		text-shadow: none;
+	}
+}
+
+
+table.index_table{
+  
+  thead{
+    th:last-child{
+      width: 180px;
+    }
+  }
+}
