--- a/app/views/posts/_post_fields.html.erb
+++ b/app/views/posts/_post_fields.html.erb
@@ -4,7 +4,7 @@
 <% if authenticated? && not_editing? %>
 	<div class="post-action-buttons">
 	 	<%= link_to 'Edit post', "/editor#{request.path}?editing_post_id=#{post.id}", class: 'btn btn-edit' if not_editing? %>
-	 	<%= link_to 'Destroy', post_path(post), confirm: 'Are you sure?', method: :delete, remote: true, class: 'btn btn-danger post-delete-link' %>
+	 	<%= link_to 'Destroy', post_path(post), confirm: 'Are you sure?', method: :delete, remote: true, class: 'btn btn-danger post-delete-link-' + post.page.template  %>
 	</div>
 <% end %>
 <%= render_editable_content(:span, post.id, { id: 'post_id', style: 'display:none' }, 'simple') %>
