--- a/app/views/posts/_static_page_post.html.erb
+++ b/app/views/posts/_static_page_post.html.erb
@@ -3,7 +3,6 @@
 		<%= render 'posts/post_fields', post: post %>
 	</div>
 	<div class="span6" style="margin-left:0">
-		<%= render_editable_content(:img, '', { src: 'http://placehold.it/300x200', id: 'post_image' , class: 'static-page-image' }, 'image') %>
- 		<!-- <%#= post.image %> -->
+    <%= render 'posts/post_image_field', post: post %>
 	</div>
 </div>
