--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
 </head>
 <body>
 	<div class="container-fluid">
+    <%= link_to 'toggle action buttons', '#', class: 'pull-left', id: 'toggle-action-buttons' if authenticated? and not_editing? %>
 		<div id="site-container">
 			<%= render partial: 'shared/header' %>
 			<div id="content-container">
