--- a/app/views/layouts/mercury.html.erb
+++ b/app/views/layouts/mercury.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, initial-scale=1.0">
     <%= csrf_meta_tags %>
-    <title>Mercury Editor</title>
+    <title>Editing - Max Blomqvist</title>
     <%= stylesheet_link_tag    'mercury' %>
     <%= javascript_include_tag 'jquery-1.7', 'mercury', 'mercury_page'  %>
   </head>
