Fixed some potiential nil errors

--- a/app/views/posts/_post_fields.html.erb
+++ b/app/views/posts/_post_fields.html.erb
@@ -1,6 +1,6 @@
 <%= render_editable_content(:h1, post.title, { id: 'post_title' }, 'simple') %>
 <% post_content = post.content.nil? ? '' : post.content %>
-<%= render_editable_content(:div, post_content.html_safe, { id: 'post_content' }, 'full') %>
+<%= render_editable_content(:div, raw(post_content), { id: 'post_content' }, 'full') %>
 <% if authenticated? && not_editing? %>
 	<div class="post-action-buttons">
 	 	<%= link_to 'Edit post', "/editor#{request.path}?editing_post_id=#{post.id}", class: 'btn btn-edit' if not_editing? %>
