--- a/app/views/pages/_page_actions.html.erb
+++ b/app/views/pages/_page_actions.html.erb
@@ -3,5 +3,6 @@
 		<hr>
 		<%= link_to 'Edit page', edit_admin_page_path(@page), class: 'btn' %>
 		<%= link_to 'New page', new_admin_page_path, class: 'btn btn-info' %>
+    <%= link_to 'Admin page', admin_root_path, class: 'btn btn-edit pull-right' %>
 	</div>
 <% end %>
