Home template fixes among other minor tweaks.

--- a/app/views/pages/blog.html.erb
+++ b/app/views/pages/blog.html.erb
@@ -4,8 +4,5 @@
 		<%= render 'posts/blog_page_post', post: post %>
 	<% end %>
 	<%= render 'pages/page_actions' %>
-	<p class="pagination">
-		<%= paginate @posts, window: 2 %>
-	</p>
-	
+	<%= paginate_posts %>
 </div>
