--- a/app/views/posts/_blog_page_post.html.erb
+++ b/app/views/posts/_blog_page_post.html.erb
@@ -3,6 +3,7 @@
 		<div class="span10">
 			<div class="blog-post">
 				<%= render 'posts/post_fields', post: post %>
+        <%= render 'posts/post_image_field', post: post %>
 			</div>
 		</div>
 		<div class="span2"></div>
