--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -33,8 +33,8 @@
 
  /*  SITE COLORS  */
  $black: #1D1D1B;
- $border_color: #bfbfbf; 
- 
+ $border_color: #bfbfbf;
+
 .hidden {
 	display: none;
 }
@@ -67,6 +67,7 @@
  		}
  	}
  	#menu{
+ 		margin-top: 20px;
  		border-top: $border_width dashed $black;
  		border-bottom: $border_width dashed $black;
  		border-color: $border_color;
@@ -92,7 +93,7 @@
  				color: $black;
  			}
  		}
- 	}	
+ 	}
  }
 
  /* FOOTER */
@@ -116,7 +117,7 @@
  		/*img.home-image:hover {
  				visibility: hidden;
  			}*/
- 	}	
+ 	}
  }
 
  /* GALLERY PAGE */
@@ -176,16 +177,16 @@
 
  .btn-info{
  	background-color: #1abc9c;
- 	&:hover, &:focus, &:active { 
- 		background-color: lighten(#1abc9c, 10%); 
+ 	&:hover, &:focus, &:active {
+ 		background-color: lighten(#1abc9c, 10%);
  		text-shadow: none;
  	}
  }
 
  .btn-danger{
  	background-color: #e74c3c;
- 	&:hover, &:focus, &:active { 
- 		background-color: lighten(#e74c3c, 10%); 
+ 	&:hover, &:focus, &:active {
+ 		background-color: lighten(#e74c3c, 10%);
  		text-shadow: none;
  	}
  }
@@ -193,8 +194,8 @@
 .btn-edit {
 	color: #ffffff;
 	background-color: #3498db;
-	&:hover, &:focus, &:active { 
-		background-color: lighten(#3498db, 10%); 
+	&:hover, &:focus, &:active {
+		background-color: lighten(#3498db, 10%);
 		color: #ffffff;
 		text-shadow: none;
 	}
@@ -263,8 +264,8 @@ nav.pagination{
  @media (max-width: 480px){
  	#menu{
  		.box-link{
- 			a { font-size: 13px !important; }
+ 			a { font-size: 9px !important; }
  		}
- 	}		
+ 	}
 
  }
