--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,11 +2,8 @@
 	<div class="container-fluid">
 		<%= render 'posts/add_post' %>
 		<% @posts.each_with_index do |post, index| %>
-			<%= render 'posts/gallery_page_post', post: post, index: index %>
+			<%= render 'posts/home_page_post', post: post, index: index %>
 		<% end %>
-		<div class="row-fluid">
-			<%= paginate @posts, window: 2 %>
-		</div>
 		<%= render 'pages/page_actions' %>
 	</div>
 </div>
