--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title do %> | <%= @page.title %> <% end %>
 <div id="home">
 	<div class="container-fluid">
 		<%= render 'posts/add_post' %>
