--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Max Blomqvist</title>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script>window.jQuery || document.write("<script src=\"<%= asset_path 'jquery-1.9.1.js' %>\">\x3C/script>")</script>
-
+  <title>Max Blomqvist <%= yield :title %></title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= stylesheet_link_tag    "http://fonts.googleapis.com/css?family=Julius+Sans+One", "data-turbolinks-track" => true %>
-
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
   <!--[if IE 7]><%= stylesheet_link_tag 'font-awesome-ie7' %><![endif]-->
 </head>
@@ -22,5 +17,8 @@
 		</div>
 		<%= render partial: 'shared/footer' %>
 	</div>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script>window.jQuery || document.write("<script src=\"<%= asset_path 'jquery-1.9.1.js' %>\">\x3C/script>")</script>
+  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 </body>
 </html>
