--- a/app/views/pages/gallery.html.erb
+++ b/app/views/pages/gallery.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title do %> | <%= @page.title %> <% end %>
 <div class="gallery-index-view">
 	<%= render 'posts/add_post' %>
 	<% @posts.each_with_index do |post, index| %>
