--- a/app/views/posts/_static_page_post.html.erb
+++ b/app/views/posts/_static_page_post.html.erb
@@ -1,4 +1,4 @@
-<div class="row-fluid static-post <%= new_post ? 'new-post hidden' : '' %>">
+<div class="row-fluid static-post static-box <%= new_post ? 'new-post hidden' : '' %>">
 	<div class="span6" style="padding-right:10px">
 		<%= render 'posts/post_fields', post: post %>
 	</div>
