--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Max Blomqvist <%= yield :title %></title>
+  <title><%= home_hash[:title] %> <%= yield :title %></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale = 1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="Author" content="<%= home_hash[:author] %>">
+  <link rel="dns-prefetch" href="//ssl.google-analytics.com">
+  <link rel="dns-prefetch" href="//s3.amazonaws.com">
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= stylesheet_link_tag    "http://fonts.googleapis.com/css?family=Julius+Sans+One", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
