--- a/app/views/posts/_blog_page_post.html.erb
+++ b/app/views/posts/_blog_page_post.html.erb
@@ -1,11 +1,8 @@
 <div class="row-fluid">
-	<div class="span12">
-		<div class="span10">
-			<div class="blog-post">
-				<%= render 'posts/post_fields', post: post %>
-        <%= render 'posts/post_image_field', post: post %>
-			</div>
+	<div class="offset1 span10">
+		<div class="blog-post">
+			<%= render 'posts/post_fields', post: post %>
+      <%= render 'posts/post_image_field', post: post %>
 		</div>
-		<div class="span2"></div>
 	</div>
 </div>
