--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,8 +29,8 @@
 
   <% if Rails.env.production? && home_hash[:domain] && home_hash[:ga_code] %>
     <script>
-      var domain = <%= home_hash[:domain] %>;
-      var ga_code = <%= home_hash[:ga_code] %>;
+      var domain = '<%= home_hash[:domain] %>';
+      var ga_code = '<%= home_hash[:ga_code] %>';
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
