Changed permalink input to select_from_collection for pages form. Added static routes for: home, blog, gallery, design, about, contact. Header links will link to the records permalink name.

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,7 +7,7 @@
 	<div id="menu">
 		<% @header_links.each do |page| %>
 		<div class="box-link">
-			<%= link_to page.title, page, class: 'header-link' %>
+			<%= link_to page.title, "/#{page.permalink}", class: 'header-link' %>
 		</div>
 		<% end %>
 	</div>
