--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,7 +7,7 @@
 	<div id="menu">
 		<% @header_links.each do |page| %>
 		<div class="box-link">
-			<%= link_to page.title, "/#{page.permalink}", class: 'header-link' %>
+			<%= link_to page.title, page_path(page), class: 'header-link' %>
 		</div>
 		<% end %>
 	</div>
