--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -263,3 +263,20 @@ nav.pagination{
 
  }
 
+.modal {
+  .close {
+    color: #fff;
+  }
+  .modal-header {
+    padding: 0;
+  }
+  .modal-body {
+    padding: 0;
+    overflow-y: visible;
+    #image-target {
+      img {
+        margin-top: -22px;
+      }
+    }
+  }
+}
