--- a/app/views/posts/_post_image_field.html.erb
+++ b/app/views/posts/_post_image_field.html.erb
@@ -1,1 +1,1 @@
-<%= render_editable_content(:div, raw(post.image_holder), { id: 'post_image_holder' }, 'full') %>
+<%= render_editable_content :div, raw(post.image_holder), { id: 'post_image_holder' }, 'full' %>
