--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale = 1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="Author" content="<%= home_hash[:author] %>">
+  <meta name="description" content="Homepage for Max Blomqvist">
   <link rel="dns-prefetch" href="//ssl.google-analytics.com">
   <link rel="dns-prefetch" href="//s3.amazonaws.com">
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
